syntax = "proto3";
option java_package = "com.smartcity";
option java_multiple_files = true;

// ====== Common Messages ======
message Confirmation {
  string status = 1;
}

message ServiceFilter {
  string service_type = 1;
}

message ServiceInfo {
  string service_type = 1;
  string service_id = 2;
  string address = 3;
}

message Response {
  string status = 1;
}

message Empty {}

// ====== Traffic Service ======
message LightCommand {
  string intersection = 1;
  string color = 2;  // RED/YELLOW/GREEN
}

message TrafficData {
  int32 vehicle_count = 1;
  string timestamp = 2;
}

service Traffic {
  rpc SetLight(LightCommand) returns (Response);
  rpc StreamTraffic(Empty) returns (stream TrafficData);
}

// ====== Bin Service ======
message BinStatus {
  string bin_id = 1;
  int32 fill_percent = 2;
}

message Summary {
  float average = 1;
}

message Zone {
  string area_id = 1;
}

message Route {
  repeated string bins = 1;
}

service Bin {
  rpc ReportBins(stream BinStatus) returns (Summary);
  rpc GetRoute(Zone) returns (Route);
}

// ====== Noise Service ======
message NoiseData {
  string sensor_id = 1;
  float decibels = 2;
}

message Alert {
  string message = 1;
  bool is_critical = 2;
}

service Noise {
  rpc MonitorNoise(stream NoiseData) returns (stream Alert);
}

// ====== Registry Service ======
service Registry {
  rpc Register(ServiceInfo) returns (Confirmation);
  rpc DiscoverServices(ServiceFilter) returns (stream ServiceInfo);
}